# Credit_card_Churn

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  churn_library.py  churn_script_logging_and_tests.py  cloudbuild.yaml  pyproject.toml  requirements_py3.6.txt  run-ci.sh
app/: main.py
