[tool.poetry]
name = "Customer Churn"
version = "0.1.2"
description = "Customer Churn"
authors = ["Sandeep Pandey <7pandeys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9 <3.11"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-image = "^0.21.0"
opencv-python = "^4.8.1.78"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "*"
pre-commit = "^3.4.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
]
ignore = [
   "E501",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
