[tool.poetry]
name = "dds-vizion"
version = "0.1.2"
description = "Dyson Data Science computer vision"
authors = ["Daniel Low <daniel.low@dyson.com>", "Rodrigo Agundez <rodrigo.agundez@dyson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9 <3.11"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-image = "^0.21.0"
uvicorn = "*"
fastapi = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "*"
pre-commit = "^3.4.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
]
ignore = [
   "E501",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
